# json-path-engine

./: README.md  engine.py  json_operator.py  pyproject.toml
tests/: rules.py  test_engine.py
tests/sample_data/: twitter_data.json
