[tool.poetry]
name = "json-path-engine"
version = "0.1.0"
description = "Combine JSON path with Venmo Business Rules engine"
authors = ["Garrett Benedict <garrett.codes@gmail.com>"]
readme = "README.md"
packages = [{include = "json_path_engine"}]

[tool.poetry.dependencies]
python = "^3.9"
business-rules = "^1.1.1"
jsonpath-ng = "^1.5.3"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
    "."
]
